# SLAM_practice

./: .gitmodules  README.md  debug.txt
install/: local_setup.sh  setup.sh
install/slam_core/share/ament_index/resource_index/package_run_dependencies/: slam_core
install/slam_core/share/ament_index/resource_index/parent_prefix_path/: slam_core
install/slam_core/share/slam_core/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/slam_core/share/slam_core/cmake/: slam_coreConfig.cmake
log/: latest_build
src/interface_pkg/: CMakeLists.txt  package.xml
src/interface_pkg/msg/: LoFTRMatches.msg
src/loftr_pkg/: package.xml  setup.cfg  setup.py
src/loftr_pkg/loftr_pkg/: loftr_node.py
src/slam_core/: CMakeLists.txt  LICENSE:Zone.Identifier
src/slam_core/include/slam_core/: G2oTypes.hpp  LocalMapping.hpp  Map.hpp  common_include.hpp  feature_tracker.hpp  frame.hpp  frontend.hpp  mappoint.hpp  opticalflow_tracker.hpp  visual_odometry.hpp
src/slam_core/src/: slam_system.cpp
src/slam_core/src/backend/: LocalMapping.cpp
src/slam_core/src/frontend/: feature_tracker.cpp  frontend.cpp  opticalflow_tracker.cpp  visual_odometry.cpp
src/slam_core/src/structure/: Map.cpp  frame.cpp  mappoint.cpp
